--- a/roles/k3s/master/tasks/main.yml
+++ b/roles/k3s/master/tasks/main.yml
@@ -19,21 +19,35 @@
 - name: Deploy metallb manifest
   include_tasks: metallb.yml
 
-- name: Init cluster inside the transient k3s-init service
+- name: Deploy prometheus-operator manifest
+  include_tasks: prometheus-operator.yml
+
+- name: Deploy ingress-nginx manifest
+  include_tasks: ingress-nginx.yml
+
+- name: Deploy kubernetes-dashboard manifest
+  include_tasks: kubernetes-dashboard.yml
+
+- name: Do the task if "server_init_args" is not defined
+  debug:
+    var: server_init_args
+
+- name: Init cluster inside the transient k3s-init service in first master
   command:
-    cmd: "systemd-run -p RestartSec=2 \
-                      -p Restart=on-failure \
-                      --unit=k3s-init \
+    cmd: "systemd-run --unit=k3s-init \
+                      -p \"CPUAccounting=yes\" \
+                      -p \"MemoryAccounting=yes\" \   
                       k3s server {{ server_init_args }}"
     creates: "{{ systemd_dir }}/k3s.service"
-
-- name: Verification
+  when: ansible_hostname == hostvars[groups['master'][0]]['ansible_hostname']
+  
+- name: Verification first master ready
   block:
-    - name: Verify that all nodes actually joined (check k3s-init.service if this fails)
+    - name: Verify that first node ready (check k3s-init.service if this fails)
       command:
         cmd: k3s kubectl get nodes -l "node-role.kubernetes.io/master=true" -o=jsonpath="{.items[*].metadata.name}"
-      register: nodes
-      until: nodes.rc == 0 and (nodes.stdout.split() | length) == (groups['master'] | length)
+      register: cluster_nodes
+      until: cluster_nodes.rc == 0 and (cluster_nodes.stdout.split() | length) > 0
       retries: "{{ retry_count | default(20) }}"
       delay: 10
       changed_when: false
@@ -49,7 +63,40 @@
         name: k3s-init
         state: stopped
       failed_when: false
-  when: not ansible_check_mode
+  when: not ansible_check_mode and ansible_hostname == hostvars[groups['master'][0]]['ansible_hostname']
+
+- name: Init cluster inside the transient k3s-init service in other masters
+  command:
+    cmd: "systemd-run --unit=k3s-init \
+                      -p \"CPUAccounting=yes\" \
+                      -p \"MemoryAccounting=yes\" \   
+                      k3s server {{ server_init_args }}"
+    creates: "{{ systemd_dir }}/k3s.service"
+  when: ansible_hostname != hostvars[groups['master'][0]]['ansible_hostname']
+
+- name: Verification all masters
+  block:
+    - name: Verify that all nodes actually joined (check k3s-init.service if this fails)
+      command:
+        cmd: k3s kubectl get nodes -l "node-role.kubernetes.io/master=true" -o=jsonpath="{.items[*].metadata.name}"
+      register: nodes
+      until: nodes.rc == 0 and (nodes.stdout.split() | length) >= (groups['master'] | length)
+      retries: "{{ retry_count | default(20) }}"
+      delay: 10
+      changed_when: false
+  always:
+    - name: Save logs of k3s-init.service
+      include_tasks: fetch_k3s_init_logs.yml
+      when: log_destination
+      vars:
+        log_destination: >-
+          {{ lookup('ansible.builtin.env', 'ANSIBLE_K3S_LOG_DIR', default=False) }}
+    - name: Kill the temporary service used for initialization
+      systemd:
+        name: k3s-init
+        state: stopped
+      failed_when: false
+  when: not ansible_check_mode and ansible_hostname != hostvars[groups['master'][0]]['ansible_hostname']
 
 - name: Copy K3s service file
   register: k3s_service
@@ -95,6 +142,12 @@
     path: /var/lib/rancher/k3s/server
     mode: "{{ p.stat.mode }}"
 
+- name: Set node password
+  debug:
+    msg:
+    - "{{ ansible_user_dir }} : {{ ansible_user_id }}"
+    - "{{ ansible_user_dir }}/.kube/config"
+
 - name: Create directory .kube
   file:
     path: "{{ ansible_user_dir }}/.kube"
@@ -134,6 +187,12 @@
   file:
     src: /usr/local/bin/k3s
     dest: /usr/local/bin/crictl
+    state: link
+
+- name: Create ctr symlink
+  file:
+    src: /usr/local/bin/k3s
+    dest: /usr/local/bin/ctr
     state: link
 
 - name: Get contents of manifests folder
