--- a/roles/k3s/master/tasks/metallb.yml
+++ b/roles/k3s/master/tasks/metallb.yml
@@ -8,14 +8,14 @@
     mode: 0644
   when: ansible_hostname == hostvars[groups['master'][0]]['ansible_hostname']
 
-- name: Copy metallb namespace to first master
-  template:
-    src: "metallb.namespace.j2"
-    dest: "/var/lib/rancher/k3s/server/manifests/metallb-namespace.yaml"
-    owner: root
-    group: root
-    mode: 0644
-  when: ansible_hostname == hostvars[groups['master'][0]]['ansible_hostname']
+# - name: Copy metallb namespace to first master
+#   template:
+#     src: "metallb.namespace.j2"
+#     dest: "/var/lib/rancher/k3s/server/manifests/metallb-namespace.yaml"
+#     owner: root
+#     group: root
+#     mode: 0644
+#   when: ansible_hostname == hostvars[groups['master'][0]]['ansible_hostname']
 
 - name: Copy metallb manifest to first master
   template:
