--- a/roles/reset/tasks/main.yml
+++ b/roles/reset/tasks/main.yml
@@ -16,6 +16,38 @@
   changed_when: "pkill_containerd_shim_runc.rc == 0"
   failed_when: false
 
+- name: RUN pkill -9 -f '.*longhorn.*'
+  register: pkill_containerd_longhorn
+  command: pkill -9 -f '.*longhorn.*'
+  changed_when: "pkill_containerd_longhorn.rc == 0"
+  failed_when: false
+
+- name: Upload uninstall files
+  copy:
+    src: "{{ item }}"
+    dest: /usr/local/bin/
+    owner: root
+    group: root
+    mode: 0755
+  loop:
+    - "{{ playbook_dir }}/k3s/k3s-killall.sh"
+    - "{{ playbook_dir }}/k3s/k3s-uninstall.sh"
+    - "{{ playbook_dir }}/k3s/k3s-agent-uninstall.sh"
+
+- name: Execute k3s-agent-uninstall.sh
+  register: k3s_agent_uninstall
+  command: /usr/local/bin/k3s-agent-uninstall.sh
+  changed_when: "k3s_agent_uninstall.rc == 0"
+  failed_when: false
+  when: "'node' in group_names"
+
+- name: Execute k3s-uninstall.sh
+  register: k3s_uninstall
+  command: /usr/local/bin/k3s-uninstall.sh
+  changed_when: "k3s_uninstall.rc == 0"
+  failed_when: false
+  when: "'master' in group_names"
+
 - name: Umount k3s filesystems
   include_tasks: umount_with_children.yml
   with_items:
@@ -29,7 +61,7 @@
   loop_control:
     loop_var: mounted_fs
 
-- name: Remove service files, binaries and data
+- name: Remove service files, binaries and data, keep /etc/rancher/k3s, /etc/rancher/ for reinstall
   file:
     name: "{{ item }}"
     state: absent
@@ -45,6 +77,18 @@
     - /var/lib/rancher/k3s
     - /var/lib/rancher/
     - /var/lib/cni/
+    - /usr/local/bin/kubectl
+    - /usr/local/bin/crictl
+    - /usr/local/bin/ctr
+    - /usr/local/bin/k3s-uninstall.sh
+    - /usr/local/bin/k3s-agent-uninstall.sh
+    - /usr/local/bin/k3s-killall.sh
+    - "{{ ansible_user_dir }}.kube"
+  register: removeresult
+  failed_when: false
+  until: "removeresult is not failed"
+  retries: 5
+  delay: 3
 
 - name: Reload daemon_reload
   systemd:
